[gd_scene load_steps=21 format=2]

[ext_resource path="res://levels/level1WaveBased/level1WaveBased.gd" type="Script" id=1]
[ext_resource path="res://levels/level1WaveBased/Waves/waveIntro.tscn" type="PackedScene" id=2]
[ext_resource path="res://ships/barrier/barrier.tscn" type="PackedScene" id=3]
[ext_resource path="res://ships/PlayerShip.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/backgrounds/starfield.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/dialogue_ui.gd" type="Script" id=6]
[ext_resource path="res://scripts/game_camera.gd" type="Script" id=7]
[ext_resource path="res://art/prototype/dark_dialogue_box.png" type="Texture" id=8]
[ext_resource path="res://levels/level1WaveBased/Waves/wave1.tscn" type="PackedScene" id=9]
[ext_resource path="res://art/prototype/trans_dialogue_box.png" type="Texture" id=10]
[ext_resource path="res://levels/level1WaveBased/FPS.gd" type="Script" id=11]
[ext_resource path="res://levels/level1WaveBased/Waves/wave2.tscn" type="PackedScene" id=12]
[ext_resource path="res://levels/level1WaveBased/Level.gd" type="Script" id=13]
[ext_resource path="res://levels/level1WaveBased/Waves/wave3.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28.25, 191.25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2938.25, 120 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2963.75, 120 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 168.75, 369 )

[sub_resource type="Animation" id=1]
resource_name = "move_dialogue_up"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 180 ), Vector2( 0, 80 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "move_dialogue_up"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../PlayerDialogueBox:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -320, 180 ), Vector2( -320, 80 ) ]
}

[node name="Game Manager" type="Node"]

[node name="Level" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="PlayerShip" parent="Level" instance=ExtResource( 4 )]
position = Vector2( -100, 0 )
bullets_node = NodePath("../BulletDump")

[node name="Background" parent="Level" instance=ExtResource( 5 )]
height = 360.0
scroll_speed = -20

[node name="BulletDump" type="Node2D" parent="Level"]

[node name="Player Bullet Sweeper" type="Area2D" parent="Level" groups=["activate", "sweep"]]
position = Vector2( 33, 0 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Player Bullet Sweeper"]
position = Vector2( 388.25, -3.25 )
shape = SubResource( 3 )

[node name="Player Bullet Sweeper2" type="Area2D" parent="Level" groups=["sweep"]]
position = Vector2( -34, -256 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Player Bullet Sweeper2"]
position = Vector2( 2517.75, -76 )
shape = SubResource( 4 )

[node name="Player Bullet Sweeper3" type="Area2D" parent="Level" groups=["sweep"]]
position = Vector2( -34, -256 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Player Bullet Sweeper3"]
position = Vector2( 2563.25, 674 )
shape = SubResource( 5 )

[node name="Player Bullet Sweeper4" type="Area2D" parent="Level" groups=["sweep"]]
position = Vector2( -34, -256 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Player Bullet Sweeper4"]
position = Vector2( -617, 305 )
shape = SubResource( 6 )

[node name="Barrier" parent="Level" instance=ExtResource( 3 )]
position = Vector2( -39, -19 )

[node name="Waves" type="Node2D" parent="Level"]

[node name="introWave" parent="Level/Waves" instance=ExtResource( 2 )]
visible = false

[node name="wave1" parent="Level/Waves" instance=ExtResource( 9 )]
visible = false

[node name="wave2" parent="Level/Waves" instance=ExtResource( 12 )]
visible = false

[node name="wave3" parent="Level/Waves" instance=ExtResource( 14 )]
visible = false

[node name="Camera2D" type="Camera2D" parent="." groups=["camera"]]
current = true
script = ExtResource( 7 )

[node name="DialogueUI" type="Control" parent="."]
script = ExtResource( 6 )

[node name="EnemyDialogueBox" type="NinePatchRect" parent="DialogueUI"]
anchor_left = 8.0
anchor_top = 4.5
anchor_right = 8.0
anchor_bottom = 4.5
margin_top = 80.0
margin_right = 320.0
margin_bottom = 180.0
rect_min_size = Vector2( 320, 100 )
texture = ExtResource( 8 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogueUI/EnemyDialogueBox"]
anims/move_dialogue_up = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="DialogueUI/EnemyDialogueBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 7.0
margin_right = -7.0
margin_bottom = -7.0

[node name="RichTextLabel" type="RichTextLabel" parent="DialogueUI/EnemyDialogueBox/MarginContainer"]
margin_right = 306.0
margin_bottom = 86.0

[node name="PlayerDialogueBox" type="NinePatchRect" parent="DialogueUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -320.0
margin_top = 180.0
margin_bottom = 280.0
rect_min_size = Vector2( 320, 100 )
texture = ExtResource( 10 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogueUI/PlayerDialogueBox"]
root_node = NodePath("../../EnemyDialogueBox")
anims/move_dialogue_up = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="DialogueUI/PlayerDialogueBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 7.0
margin_right = -7.0
margin_bottom = -7.0

[node name="RichTextLabel" type="RichTextLabel" parent="DialogueUI/PlayerDialogueBox/MarginContainer"]
margin_right = 306.0
margin_bottom = 86.0

[node name="FPS" type="Label" parent="."]
anchor_left = -0.488
anchor_top = -0.486
anchor_right = -0.488
anchor_bottom = -0.486
margin_left = -0.679993
margin_top = 0.960007
margin_right = 54.32
margin_bottom = 14.96
script = ExtResource( 11 )

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 1 )
